trying --add-exports