@@ -314,7 +314,7 @@
                                  Unable to make member of class jdk.internal.ref.Cleaner accessible: 
                                  module java.base does not export jdk.internal.ref to unnamed module @bd8be5 
                             -->                            
-                            <argLine>-Xmx100m -Xms100m -XaddExports:java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
+                            <argLine>-Xmx100m -Xms100m --add-exports:java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
